<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

  <ScrollView
      android:id="@+id/scrollview"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginBottom="100dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/constraintLayout2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/welcome"
            android:textColor="@color/orrr"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/order"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:srcCompat="@drawable/profile" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/search_background"
            android:drawableStart="@drawable/search"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/find"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/orange_light_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">

          <ImageView
              android:id="@+id/imageView2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="15dp"
              android:layout_marginEnd="100dp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="1.0"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:srcCompat="@drawable/delivery" />

          <TextView
              android:id="@+id/textView6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/free"
              android:textColor="@color/black"
              android:textSize="16sp"
              android:textStyle="bold"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="@+id/imageView2" />

          <TextView
              android:id="@+id/textView7"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/free_delivery"
              android:textSize="16sp"
              app:layout_constraintStart_toStartOf="@+id/textView6"
              app:layout_constraintTop_toBottomOf="@+id/textView6"
              tools:textStyle="bold" />

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="25dp"
              android:background="@drawable/red_button"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="@+id/textView6"
              app:layout_constraintStart_toStartOf="@+id/textView7"
              app:layout_constraintTop_toBottomOf="@+id/textView7">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:text="@string/order_now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

          </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/pop"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
  </ScrollView>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/f6"
        android:gravity="bottom"
        app:fabCradleMargin="5dp"
        app:fabCradleRoundedCornerRadius="30dp"
        app:fabCradleVerticalOffset="1dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="60dp">

        <LinearLayout
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical">


          <ImageView
              android:id="@+id/imageView3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              app:srcCompat="@drawable/home" />

          <TextView
              android:id="@+id/textView13"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/home"
              android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical">


          <ImageView
              android:id="@+id/imageView3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              app:srcCompat="@drawable/person" />

          <TextView
              android:id="@+id/textView13"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/prof"
              android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nohomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:visibility="invisible">


          <ImageView
              android:id="@+id/noimageView3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:visibility="invisible"
              app:srcCompat="@drawable/_dots" />

          <TextView
              android:id="@+id/textView13"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/home"
              android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SupportBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical">


          <ImageView
              android:id="@+id/imageView3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              app:srcCompat="@drawable/quest" />

          <TextView
              android:id="@+id/textView13"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/supp"
              android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SettingBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical">


          <ImageView
              android:id="@+id/imageView3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              app:srcCompat="@drawable/sett" />

          <TextView
              android:id="@+id/textView13"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/sett"
              android:textAlignment="center" />
        </LinearLayout>
      </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orrr"
        android:contentDescription="@string/app_name"
        android:elevation="3dp"
        android:src="@drawable/shopcart"
        app:backgroundTint="@color/orrr"
        app:layout_anchor="@id/app_bar"></com.google.android.material.floatingactionbutton.FloatingActionButton>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>